# glyph

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  GLYPH_LANGUAGE_GUIDE.md  LICENSE  README.md  REPAIR_PASS_SPEC.md  expand.glyph  expand.glyph.md  llm_expand_pass.md  mvp-issues.md  output-target-expression-note.md
crates/glyph-cli/: Cargo.toml
crates/glyph-cli/src/: main.rs
crates/glyph-cli/tests/: atomic_emission.rs  body_constraints_parity.rs  branching.rs  check_subcommand.rs  const_kinds.rs  constraints_context.rs  diagnostics_invalid.rs  emit_ir.rs  export_block.rs  flow_assign.rs  fmt.rs  generated_decl_enforcement.rs  imported_tier1_output_contract.rs  imports.rs  integration_issue_82.rs  integration_issue_83.rs  integration_issue_84.rs  integration_issue_85.rs  integration_issue_86.rs  library_files.rs  multi_file_acceptance.rs  multi_file_build.rs  output_flag.rs  output_target_descriptive.rs  parameters.rs  predicate_correctness.rs  pretty_column_render.rs  single_file_imports.rs  snapshot_cross_kind.rs  strict_mode.rs  tier2_procedure.rs  type_decls.rs  typed_decl_missing_return.rs  validate_output.rs  walking_skeleton.rs
crates/glyph-cli/tests/fixtures/: predicate_block_param_default.expected.md  predicate_block_param_default.glyph  predicate_block_param_default_per_block_scope.expected.md  predicate_block_param_default_per_block_scope.glyph  predicate_branch_in_block_procedure.expected.md  predicate_branch_in_block_procedure.glyph  predicate_branch_in_tier1_block.expected.md  predicate_branch_in_tier1_block.glyph  predicate_const_multi_arm.expected.md  (+15 more)
crates/glyph-lsp/: Cargo.toml  README.md
crates/glyph-lsp/src/: convert.rs  lib.rs  main.rs
(+507 files in other folders)
