[workspace]
members = ["crates/glyph-core", "crates/glyph-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
codespan-reporting = "0.11"
glyph-core = { path = "crates/glyph-core" }
