[package]
name = "glyph-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "glyph"
path = "src/main.rs"

[dependencies]
glyph-core = { workspace = true }
clap = { workspace = true }
codespan-reporting = { workspace = true }

[dev-dependencies]
insta = "1"
