[package]
name = "glyph-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "glyph"
path = "src/main.rs"

[dependencies]
glyph-core = { workspace = true }
clap = { workspace = true }
codespan-reporting = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = "1"
serde_json = { workspace = true }
tempfile = { workspace = true }
