[package]
name = "glyph-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "glyph_lsp"
path = "src/lib.rs"

[[bin]]
name = "glyph-lsp"
path = "src/main.rs"

[dependencies]
glyph-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-lsp = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
